# plover-geminipr-full

./: geminipr_full.py  setup.cfg
