[metadata]
name = plover-geminipr-full
version = 0.0.1
description = Plover Stenotype layout but with extra keys
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/phamlan83/plover-geminipr-full
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9  

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev10
py_modules =
	geminipr_full

[options.entry_points]
plover.system =
  Stenotype Extended = geminipr_full
